minor change to MergePlansFiles
git-svn-id: file:///srv/local/data/cleanRepo/trunk@21195 a0517364-e873-4167-b1c8-416daa5a6b91