@@ -8,12 +8,14 @@ import javax.swing.JFileChooser;
 import javax.swing.filechooser.FileFilter;
 
 import org.matsim.api.core.v01.Scenario;
+import org.matsim.api.core.v01.network.Network;
 import org.matsim.api.core.v01.population.Person;
 import org.matsim.api.core.v01.population.Population;
 import org.matsim.api.core.v01.population.PopulationWriter;
 import org.matsim.core.config.Config;
 import org.matsim.core.config.ConfigUtils;
 import org.matsim.core.scenario.ScenarioUtils;
+import org.matsim.core.utils.collections.Tuple;
 
 public class MergePlansFiles {
 
@@ -35,11 +37,24 @@ public class MergePlansFiles {
 		}
 		@Override
 		public boolean accept(File f) {
-			return f.getName().toLowerCase(Locale.ROOT).endsWith( ".xml" );
+			return f.isDirectory() || f.getName().toLowerCase(Locale.ROOT).endsWith( ".xml" );
+		}
+	};
+	
+	private static FileFilter matsimNetworkFileFilter = new FileFilter() {
+		@Override
+		public String getDescription() {
+			return "MATSim network file in *.xml or *.gz format";
+		}
+		@Override
+		public boolean accept(File f) {
+			return f.isDirectory() || f.getName().toLowerCase(Locale.ROOT).endsWith( ".xml" );
 		}
 	};
 	
 	public static void main(String[] args){
+		
+		String networkFileName = openFile("Select a network file", matsimNetworkFileFilter);
 		
 		String currentPlansFile = null;
 		int plansNumber = 1;
@@ -53,11 +68,17 @@ public class MergePlansFiles {
 			currentPlansFile = openFile(dialogTitle, matsimPlansFilefilter);
 		}
 		
-		Population basePop = openPlansFile(files.get(0));
+		Population basePop;// = openPlansFile(files.get(0), networkFileName);
+		Network net;
+		{
+			Tuple<Population, Network> t = openPlansFile(files.get(0), networkFileName);
+			basePop = t.getFirst();
+			net = t.getSecond();
+		}
 		for (int i = 1; i <  files.size(); i++){
 			String file = files.get(i);
 			
-			Population nextPop = openPlansFile(file);
+			Population nextPop = openPlansFile(file, networkFileName).getFirst();
 			for (Person p : nextPop.getPersons().values()){
 				try {
 					basePop.addPerson(p);
@@ -70,15 +91,18 @@ public class MergePlansFiles {
 		String outfile = saveFile("Save plans file", matsimPlansFileFilterXML);
 		if (outfile == null) System.exit(0);
 		
-		new PopulationWriter(basePop, null).write(outfile);
+		new PopulationWriter(basePop, net).write(outfile);
 	}
 	
-	private static Population openPlansFile(String filename){
+	private static Tuple<Population, Network> openPlansFile(String plansFileName, String networkFileName){
 		Config config = ConfigUtils.createConfig();
-		config.plans().setInputFile(filename);
+		config.network().setInputFile(networkFileName);
+		config.plans().setInputFile(plansFileName);
 		Scenario scenario = ScenarioUtils.loadScenario(config);
 		
-		return scenario.getPopulation();
+		Tuple<Population, Network> t = new Tuple<Population, Network>(scenario.getPopulation(), scenario.getNetwork());
+		
+		return t; 
 	}
 	
 	private static String openFile(String dialogTitle, FileFilter ff){
